[package]
name = "moby-atlas"
version = "0.1.0"
edition = "2021"
description = "Source-cited cannabis state atlas for regulators, license types, taxes, compliance systems, and market structure."
license = "MIT"
repository = "https://github.com/LJrobinson/moby-atlas"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"