[package]
name = "moby-atlas"
version = "0.9.0"
edition = "2021"
description = "Rust CLI and source-cited cannabis state atlas for comparing regulators, license types, taxes, track-and-trace systems, and active license sources."
license = "MIT"
repository = "https://github.com/LJrobinson/moby-atlas"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
